--- a/templates/home.html
+++ b/templates/home.html
@@ -1,29 +1,41 @@
 <!-- templates/home.html -->
 {% extends "base.html" %}
 
+
 {% block content %}
-  <h1>Home page</h1>
+<div class="container">
+    <h1>Would you Survive the Titanic?</h1>
+
 
   <!-- This form references the homePost route. -->
 <form action="{% url 'homePost' %}" method="post">
 {% csrf_token %}
 
-<h3>Years Work Experience</h3>
+<h3>Ticket Class</h3>
+<select name="ticket_class" id="ticket_class">
+  <option value="1">1</option>
+  <option value="2">2</option>
+  <option value="3">3</option>
+</select>
 
-<!-- Show radio button list named 'choice' -->
-{% for choice in mynumbers %}
-    <input type="radio" name="choice" id="choice{{ forloop.counter }}" value="{{ choice }}">
-    <label for="choice{{ forloop.counter }}">{{ choice }}</label><br>
-{% endfor %}
+<h3>Passenger Gender</h3>
+<input type="radio" id="gender_male" name="gender" value="0">
+<label for="gender_male">Male</label><br>
+<input type="radio" id="gender_female" name="gender" value="1">
+<label for="gender_female">Female</label><br>
 
-  <h3>GMAT Score</h3>
-  <input type="text" id="gmat" name="gmat"><br><br>
+<h3>Passenger Age</h3>
+<input type="text" id="passenger_age" name="passenger_age"><br>
 
-<!—Submit button is also contained in the form -->
-<input type="submit" value="POST YOUR CHOICE">
+<h3>Passenger Fare</h3>
+<input type="text" id="passenger_fare" name="passenger_fare"><br><br>
+
+<!-- Submit button is also contained in the form -->
+<input type="submit" value="Submit">
 </form>
 <!-- End of form. -->
 
 <!-- This error will notify the user if there are issues with the POST request -->
 {% if errorMessage %}<p><strong>{{errorMessage}}</strong></p>{% endif %}
 {% endblock content %}
+</div>
